src/components/PostCard/PostCard.module.css
.postCardContainer {
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    background-color: snow;
    margin-bottom: 1rem;
    text-decoration: none;
}

.card {
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: column;
    /* width: 50%;
    height: 50%; */
    max-width: 775px;
    background-color: white;
    border-radius: 10px;
    box-shadow: 0px 0px 4px grey;
    margin-bottom: .1px;

}

img {
    max-width: 100%;
    max-height: 100%;
    display: block;
}

span {
    font-size: 1rem;
    font-weight: bold;
    color: rgb(38,38,38);
    padding-left: 20px;
    padding-right: 10px;
    
}

.username {
    font-size: 1.5rem;
    padding-right: 30px;
    font-weight: bold;
    margin-bottom: 1rem;
    padding-left: 30px;
    padding-right: 10px;
    width: auto;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    display: flex;
}
p {
    padding-bottom: 13px;
}

.author {
    border-bottom: 1px solid rgb(227, 226, 226);
}

.delete {
    cursor: pointer;
}

